<resources>

    <string name="onboard_message">
        Welcome to BusTracker! Your seamless travel companion. Experience the convenience of real-time bus tracking with geofence alerts. Stay updated on your bus location and never miss your stop again. Join our community today to enjoy stress-free commuting! Happy travels with BusTracker!
    </string>

    <string name="app_name">SGBusAndLocationAlarm</string>
    <string name="title_activity_maps">MapsActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="Sign_In">Sign In</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Have_An_account">Already have an account?</string>
    <string name="Enter_Account_Credentials">Enter <font color='#FF6200'>credentials</font> for your account.</string>

    <!--  Sign Up  -->
    <string name="Sign_Up">Sign Up</string>
    <string name="Enter_Email">Enter an <font color='#FF6200'>email</font> for your account.</string>
    <string name="Enter_Password">Enter a <font color='#FF6200'>password</font> for your account.</string>
    <string name="Dont_Have_Account">Don\'t have an account?</string>
    <string name="Forgot_Password">Forgot your password? <font color='#FF6200'>Reset here!</font></string>
    <!--  Sign In  -->
    <string name="Create_A_Geofence">Create a Geofence</string>
    <string name="Enter_Name_Geofence">Enter a <font color='#FF6200'>name</font> for your Geofence.</string>
    <string name="Enter_Location_Geofence">Enter the <font color='#FF6200'>location</font> for your Geofence.</string>
    <string name="Enter_Radius_Geofence">Enter the <font color='#FF6200'>size</font> for your Geofence.</string>
    <string name="Confirm_Geofence"><font color='#FF6200'>Confirm</font> details for your Geofence.</string>

    <string name="Alert_Type">Alert Type</string>
    <string name="Details">Details</string>
    <string name="Schedule">Schedule</string>
    <string name="Start_Date">Start Date</string>
    <string name="End_Date">End Date</string>
    <string name="Time">Time</string>
    <string name="Add">+</string>
    <string name="Minus">_</string>
    <string name="Next">Next</string>

    <string name="mapbox_access_token">pk.eyJ1IjoibWFyY3VzbmVvIiwiYSI6ImNsbXZ0dmg2bTBreWQyaWxkMGdqZzZiZXoifQ.qfj8jdgycIVDqmYLgt2CXw</string>

    <string name="Name">Name</string>
    <string name="Range">Range</string>
    <string name="Notifier_Type">Type</string>
    <string name="Set_Active">Set Active</string>
    <string name="Bus_Arrivals">Bus Arrivals</string>
    <string name="Single">Single-Point</string>
    <string name="Multi">Multi-Point</string>
    <string name="Create">Create</string>
    <string name="Cancel">Cancel</string>


    <string name="map_id">850493ec2ab098de</string>

    <string name="legends">Legends</string>
    <string name="show_details">Show Details</string>

    <string name="Unknown_Error">Unknown Error</string>
    <string name="Signin_Cancelled">Sign-in Cancelled</string>
    <string name="No_Internet_Connection">No Internet Connection</string>

    <string name="Show_Map">Show Map</string>
    <string name="Full_Map">Full Map</string>
    <string name="Hide_Map">Hide Map</string>
    <string name="Number_Of_Locations_0">Number of Locations: </string>
    <string name="Zero">0</string>
    <string name="Show"> (Show)</string>


    <string-array name="testing">
        <item>mm</item>
        <item>mmdmd</item>
    </string-array>

    <string name="Search_Hint">Search bus stop or bus service</string>

    <string name="No_Data_Found">No Data Found!</string>


    <!-- Placeholders -->
    <string name="Image_Desc">Image</string>
    <string name="Image_Button_Desc">Image Button</string>
    <string name="Tab">Tab</string>

    <string name="Bus_Stop_Desc">Bus Stop Desc</string>
    <string name="Bus_Stop_Code">273654</string>

    <string name="Bus_Service">969e</string>
    <string name="Bus_Service_Details">--- 32 Stops</string>
    <string name="Bus_Service_Operator">(SBST)</string>
    <string name="Bus_Service_Origin">Raffles Blvd</string>
    <string name="Bus_Service_Destination">Orchard Road</string>


    <string name="Stop_Road">Bus Stop Road</string>

    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

</resources>
